--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  margin: 0% 10%;
+  margin: 0% 15%;
 }
 
 code {
@@ -40,4 +40,5 @@ h4 {
 
 a {
   color: rgb(56, 56, 56);
+  text-decoration: none;
 }
