--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,17 @@ body {
   margin: 0% 15%;
 }
 
+@media screen and (max-width: 768px) {
+  body {
+    margin: 0% 10%;
+  }
+}
+@media screen and (max-width: 600px) {
+  body {
+    margin: 0% 5%;
+  }
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
